Added command line arguments and configurability of server port number
Added -w or --wall <config> command line argument to server, to override $WALL.
Added serverPort property to platform config file.
Added -p or --port <portnumber> command line argument to server and renderer.
Added -l or --local command line argument to renderer.
Updated ReadMe accordingly.
Also fixed Makefile and walldo so that rsync works better, and moved slides-related make commands to slideShows/Makefile.

--- a/renderer/package.json
+++ b/renderer/package.json
@@ -10,7 +10,8 @@
 		"toolbar": true
 	},
 	"dependencies": {
-		"socket.io-client": "0.9.16"
+		"socket.io-client": "0.9.16",
+		"commander": "2.2.0"
 	},
 	"scripts": {
 		"postinstall": "cp ../shared/*.js node_modules",
