--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,9 @@
 		"toolbar": true
 	},
 	"dependencies": {
-		"express": "3.x",
-		"socket.io": "0.9.16"
+		"express": "3.8.1",
+		"socket.io": "0.9.16",
+		"commander": "2.2.0"
 	},
 	"scripts": {
 		"postinstall": "cp ../shared/*.js node_modules",
