--- a/renderer/package.json
+++ b/renderer/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "Renderer",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"main": "content/renderer.html",
-	"node-main": "lib/Renderer.js",
+	"node-main": "renderer.js",
 	"single-instance": false,
 	"window": {
-		"title": "A WildOS Client",
+		"title": "WildOS Renderer",
 		"frame": true,
-		"toolbar": true
+		"toolbar": true,
+		"show": false
 	},
 	"dependencies": {
 		"socket.io-client": "0.9.16",
