--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "server",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"main": "content/server.html",
 	"node-main": "WildOS.js",
 	"single-instance": false,
 	"window": {
 		"title": "The WildOS Server",
 		"frame": true,
-		"toolbar": true
+		"toolbar": true,
+		"show": false
 	},
 	"dependencies": {
 		"express": "3.8.1",
