First cut for a version running with nwjs 0.13+, which has major architectural changes. Fixed incompatibilities with new nwjs Removed calls to Object.observe and replaced with new shared/spy.js

--- a/renderer/package.json
+++ b/renderer/package.json
@@ -1,14 +1,11 @@
 {
-	"name": "Renderer",
+	"name": "WildOS-renderer",
 	"version": "0.2.2",
 	"main": "content/renderer.html",
 	"node-main": "renderer.js",
-	"single-instance": false,
 	"window": {
 		"title": "WildOS Renderer",
-		"frame": true,
-		"toolbar": true,
-		"show": false
+		"show": true
 	},
 	"dependencies": {
 		"socket.io-client": "0.9.16",
